# dagster-demo

./: pyproject.toml
src/dagster_demo/dbt/: dbt_project.yml  package-lock.yml  packages.yml
src/dagster_demo/dbt/macros/: generate_schema_name.sql
src/dagster_demo/dbt/models/marts/JAFFLE_SHOP_MART/: fct_customers.sql  fct_customers.yml  fct_order_items.sql  fct_order_items.yml  fct_orders.sql  fct_orders.yml
src/dagster_demo/dbt/models/source/JAFFLE_SHOP_RAW/: source.yml
src/dagster_demo/dbt/models/staging/: __sources.yml
src/dagster_demo/dbt/models/staging/JAFFLE_SHOP_SERVING/: stg_customers.sql  stg_locations.sql  stg_locations.yml  stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_supplies.sql
src/dagster_demo/dbt/seeds/jaffle-data/: properties.yml
src/dagster_demo/dbt/seeds/jaffle-data/JAFFLE_SHOP_RAW/: properties.yml
src/dagster_demo/defs/: jobs.py  partitions.py  project.py  resources.py  schedules.py
src/dagster_demo/defs/assets/: dbt.py  dlt.py
