[project]
name = "dagster_demo"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.11.3",
    "dagster-dbt>=0.27.3",
    "dagster-dlt>=0.27.3",
    "dagster-gcp>=0.27.3",
    "dbt-bigquery>=1.10.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_demo"
registry_modules = [
    "dagster_demo.components.*",
]

[tool.uv.sources]
dagster-demo = { workspace = true }
